<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/MGR_S_shift_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_shift_settings"/>

        <Button
            android:id="@+id/MGR_S_spec_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_spec_settings"/>

        <Button
            android:id="@+id/MGR_S_shift_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_shift_hours"/>

        <Button
            android:id="@+id/MGR_S_submission_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_last_time_to_submit"/>

    </LinearLayout>

    <Button
        android:id="@+id/MGR_S_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/back"/>

    <TextView
        android:id="@+id/NULL_MGR_S_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/mgr_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <View
        android:id="@+id/NULL_MGR_S_sep"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/NULL_MGR_S_title"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>
