<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <TextView
        android:id="@+id/MGR_hello_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/NULL_MGR_ll"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:id="@+id/NULL_MGR_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/MGR_arraignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_arraignment"/>

        <Button
            android:id="@+id/MGR_phone_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_phone_book"/>

        <Button
            android:id="@+id/MGR_accmgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_accmgr_title"/>

        <Button
            android:id="@+id/MGR_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mgr_settings"/>

    </LinearLayout>


    <Button
        android:id="@+id/MGR_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ui_logout"/>
</RelativeLayout>