<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <TextView
        android:id="@+id/USR_unapproved_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/user_unapproved"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/USR_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">


        <Button
            android:id="@+id/USR_shift_for_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_show_shifts"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:id="@+id/USR_submit_shifts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ui_submit_shifts"/>

            <Button
                android:id="@+id/USR_worker_phone_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ui_phone_book"/>

        </LinearLayout>

        <Button
            android:id="@+id/USR_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_logout"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/USR_loading_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_wait"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>
