<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/LOG_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/LOG_existing_acc_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:gravity="center"
                android:text="@string/register_existing_acc"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/LOG_existing_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="true"
                android:gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/LOG_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_persons_name"
            android:inputType="textPersonName"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/LOG_workplace_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_workplace_name"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/LOG_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/LOG_password_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/login_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/LOG_password_secodary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/LOG_incomp_pass_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/prob_password_dont_match"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/LOG_perma_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/perma_login"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/LOG_perma_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:checked="false"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/LOG_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_login"/>

</RelativeLayout>